Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Use AC_CONFIG_DIRS instead of CONFIG_DIRS, and
		remove use of DO_SUBDIRS.

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Sun Jan 14 03:19:55 1996  Mark Eichin  <eichin@cygnus.com>

	* README.gssftp: new file, documents history of this implementation.

Sat Sep 30 16:28:34 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in, Makefile.in: New files controlling the
	construction of the GSSAPI implementation of ftp.
