@@ -1,20 +1,0 @@
-AC_INIT(ftp.c)
-CONFIG_RULES
-AC_CONST
-AC_PROG_INSTALL
-KRB5_SIGTYPE
-USE_ANAME
-CHECK_SIGPROCMASK
-CHECK_WAIT_TYPE
-DECLARE_SYS_ERRLIST
-AC_CHECK_SIZEOF(short)
-AC_CHECK_SIZEOF(int)
-AC_CHECK_SIZEOF(long)
-AC_FUNC_VFORK
-AC_HAVE_FUNCS(getcwd getdtablesize)
-AC_HEADER_STDARG
-AC_CHECK_HEADERS(sys/select.h)
-AC_HEADER_CHECK(termios.h,AC_FUNC_CHECK(cfsetispeed,AC_DEFINE(POSIX_TERMIOS)))
-AC_CHECK_HEADERS(stdlib.h)
-KRB5_BUILD_PROGRAM
-V5_AC_OUTPUT_MAKEFILE
