@@ -1,49 +1,0 @@
-AC_INIT(ftpcmd.y)
-CONFIG_RULES
-AC_CONST
-AC_PROG_INSTALL
-AC_PROG_YACC
-KRB5_SIGTYPE
-CHECK_UTMP
-CHECK_SIGPROCMASK
-CHECK_WAIT_TYPE
-AC_CHECK_SIZEOF(short)
-AC_CHECK_SIZEOF(int)
-AC_CHECK_SIZEOF(long)
-DECLARE_SYS_ERRLIST
-AC_FUNC_VFORK
-AC_HEADER_STDARG
-AC_CHECK_HEADERS(unistd.h stdlib.h string.h)
-AC_REPLACE_FUNCS(getdtablesize)
-AC_HAVE_FUNCS(getcwd getusershell seteuid setreuid setresuid)
-AC_CHECK_LIB(crypt,crypt) dnl 
-dnl 
-dnl copied from appl/bsd/configure.in
-AC_MSG_CHECKING([setenv])
-AC_CACHE_VAL(krb5_cv_setenv,
-[AC_TRY_LINK(
-[],[setenv("PATH","/bin",0);],
-krb5_cv_setenv=yes,krb5_cv_setenv=no)])
-AC_MSG_RESULT($krb5_cv_setenv)
-if test $krb5_cv_setenv = no; then
-SETENVSRC='$(srcdir)/../bsd/setenv.c'
-SETENVOBJ=setenv.o
-AC_SUBST([SETENVSRC])
-AC_SUBST([SETENVOBJ])
-fi
-AC_MSG_CHECKING([shadow password support])
-AC_CACHE_VAL(krb5_cv_shadow_pwd,
-[AC_TRY_LINK(
-[#include <sys/types.h>
-#include <pwd.h>
-#include <shadow.h>],
-[struct spwd *sp = getspnam("root")],
-krb5_cv_shadow_pwd=yes, krb5_cv_shadow_pwd=no)])
-AC_MSG_RESULT($krb5_cv_shadow_pwd)
-if test $krb5_cv_shadow_pwd = yes; then
-AC_DEFINE(HAVE_SHADOW)
-fi
-dnl
-dnl
-KRB5_BUILD_PROGRAM
-V5_AC_OUTPUT_MAKEFILE
