@@ -1,3 +1,12 @@
+Fri Feb 13 15:31:26 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* Makefile.in: Define LOCAL_SUBDIRS to recurse into the
+		ftp and ftpd subdirectories.
+
+	* configure.in: Create the makefiles for all of the subdirectories
+		and move all of the configure.in tests from the
+		subdirectories into this configure.in.
+	
 Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* configure.in: Use AC_CONFIG_DIRS instead of CONFIG_DIRS, and
